- 라우팅 예시 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "esModuleInterop": true,
     "noImplicitAny": true,
     "sourceMap": true,
-    "baseUrl": ".",
+    "baseUrl": "/",
     "outDir": "dist",
     "moduleResolution": "node",
     "resolveJsonModule": true,
@@ -15,6 +15,5 @@
       "*": ["node_modules/*"]
     },
     "jsx": "react"
-  },
-  "include": ["src/**/*"]
+  }
 }
